--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,9 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: install packages
-      run: apt-get update && apt-get install --no-install-recommends -y git build-essential qt5-qmake qtbase5-dev ca-certificates
+      run: sudo sed -i 's/main$/main non-free/' /etc/apt/sources.list && sudo apt-get update && sudo apt-get install --no-install-recommends -y git build-essential qt5-qmake qtbase5-dev ca-certificates
     - name: cleanup and revert list
-      run: rm -rf /var/lib/apt/lists/*
+      run: sudo rm -rf /var/lib/apt/lists/*
     - name: make and compile
       run: qmake -o Makefile ngPost.pro && make -j$(nproc)
     - name: make and compile src
