--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,5 +19,5 @@ jobs:
       run: sudo rm -rf /var/lib/apt/lists/*
     - name: ls
       run: ls .
-    #- name: make and compile src
-    #  run: cd /usr/src/ng/src && qmake -o Makefile nzbCheck.pro && make -j$(nproc)
+    - name: make and compile src
+      run: cd src && qmake -o Makefile nzbCheck.pro && make -j$(nproc)
