--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,4 +20,6 @@ jobs:
     - name: ls
       run: ls .
     - name: make and compile src
-      run: cd src && qmake -o Makefile nzbCheck.pro && make -j$(nproc)
+      run: cd src && qmake -o Makefile ngPost_cmd.pro && make -j$(nproc)
+    - name: list src
+      run: ls -alt .
