fix windows build path

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -52,21 +52,21 @@ jobs:
       run:  |
             7z x jom.zip -ojom
 
-    - name: (6) Create build directory
+    - name: Create build directory
       run:  mkdir ${{ runner.temp }}\build
 
-    - name: (7) Set up Visual Studio shell
+    - name: Set up Visual Studio shell
       uses: egor-tensin/vs-shell@v2
       with:
           arch: x64
 
-    - name: (8) Build
+    - name: Build
       working-directory: ${{ runner.temp }}\build
       run:  |
-            qmake -r ${{ env.SOURCE_DIR }}\planets-qml.pro
+            qmake -r ${{ env.SOURCE_DIR }}\src\ngPost_cmd.pro
             ${{ runner.temp }}\jom\jom -j2
             cd release
-            windeployqt --qmldir ${{ env.SOURCE_DIR }} planets-qml.exe --pdb --release --compiler-runtime
+            windeployqt --qmldir ${{ env.SOURCE_DIR }} ngPost_cmd.exe --pdb --release --compiler-runtime
             copy C:\Windows\System32\concrt140.dll . 
             copy C:\Windows\System32\vccorlib140.dll .
             copy C:\Windows\System32\msvcp140.dll .
