--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -72,6 +72,11 @@ jobs:
             copy C:\Windows\System32\msvcp140.dll .
             copy C:\Windows\System32\vcruntime140.dll .
 
-    - name: List items
-      working-directory: ${{ runner.temp }}\build\release
-      run: dir .
+    - name: List items from release and src
+      run: dir ${{ runner.temp }}\build\release
+
+    - name: List items from src
+      run: dir ${{ runner.temp }}\src
+
+    - name: List items from build
+      run: dir ${{ runner.temp }}\build
