--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -72,11 +72,11 @@ jobs:
             copy C:\Windows\System32\msvcp140.dll .
             copy C:\Windows\System32\vcruntime140.dll .
 
-    - name: List items from release and src
+    - name: List items from release
       run: dir ${{ runner.temp }}\build\release
-
-    - name: List items from src
-      run: dir ${{ runner.temp }}\src
 
     - name: List items from build
       run: dir ${{ runner.temp }}\build
+
+    - name: List items from src
+      run: dir ${{ env.SOURCE_DIR }}\src
